deployments/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cicd-system
  labels:
    name: cicd-system

---
apiVersion: v1
kind: Namespace
metadata:
  name: cicd-runners
  labels:
    name: cicd-runners
